TWC3167-7767 : When overlapping deals are created for tender, the error message is not shown at deal id column in DE screen fixed (#2726)

--- a/Intel.MyDeals/Client/src/app/contract/dealEditor/dealEditor.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/dealEditor/dealEditor.component.css
@@ -1431,7 +1431,8 @@ kendo-dialog.ok-button-color-change kendo-dialog-actions button.first-child-btn:
 }
 
 #DC_ID .err-bit {
-    margin: -45px 0 0 1px !important
+    margin: -45px 0 0 1px !important;
+    top:44px
 }
 
 #closePopover {
